fix main menu overflow

--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,7 @@ body {
 
 #main-menu {
   padding: 60px 40px 60px 40px;
+  overflow: hidden;
 }
 
 /*********/
